--- a/client/backend/package.json
+++ b/client/backend/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "child_process": "^1.0.2",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -24,11 +25,14 @@
     "firebase": "^11.7.1",
     "firebase-admin": "^13.4.0",
     "fluent-ffmpeg": "^2.1.3",
+    "franc": "^6.2.0",
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.3",
+    "lodash.debounce": "^4.0.8",
+    "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "play-dl": "^1.9.7",
     "stream": "^0.0.3",
     "yt-search": "^2.13.1"
