--- a/client/backend/package.json
+++ b/client/backend/package.json
@@ -27,6 +27,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "franc": "^6.2.0",
     "googleapis": "^148.0.0",
+    "hls.js": "^1.6.11",
     "jsonwebtoken": "^9.0.2",
     "lodash.debounce": "^4.0.8",
     "mongoose": "^8.15.0",
